Home page issue is resolved , now just have to wrap the navigation bar in hamburger icon

--- a/collections.css
+++ b/collections.css
@@ -8,10 +8,7 @@
 {
     background-color: #d4eefc;
     height: auto;
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-top: 3%;
-    padding-bottom: 3%;
+    padding: 10% 5%;
 }
 .text
 {
